# Repository-name-minimal-sfm-slam-cpp

./: .gitignore  CMakeLists.txt  CODEX_IMPLEMENTATION_PLAN_minimal_sfm_slam_cpp.md  README.md
apps/: bundle_adjustment_demo.cpp  monocular_vo_demo.cpp  pointcloud_demo.cpp  two_view_reconstruction.cpp
data/: README.md
docs/: math_notes.md  results.md  roadmap.md
include/camera/: pinhole_camera.hpp
include/features/: feature_matching.hpp
include/geometry/: epipolar_geometry.hpp  pose_utils.hpp  triangulation.hpp
include/pointcloud/: ply_io.hpp  pointcloud_utils.hpp
include/sfm/: bundle_adjustment.hpp  two_view_sfm.hpp
include/vo/: monocular_vo.hpp
scripts/: plot_trajectory.py  visualize_pointcloud.py
src/features/: feature_matching.cpp
src/geometry/: triangulation.cpp
src/pointcloud/: ply_io.cpp  pointcloud_utils.cpp
src/sfm/: bundle_adjustment.cpp  two_view_sfm.cpp
src/vo/: monocular_vo.cpp
tests/: README.md
